--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
 
 body {
     font-family: "Roboto Condensed", Arial;
-    background-color: black;
+    background-color: rgb(94, 94, 94);
     color: white;
+    margin: 0px;
+
 }
 
 h1 {
@@ -11,4 +13,37 @@ h1 {
     background-color: lightblue;
     font-weight: bold;
     color: black;
+    font-size: 50px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.navigation {
+    ul {
+        list-style-type: none;
+        background-color: white;
+        margin: 0px;
+        padding: 0px;
+        float: left;
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    a {
+        text-decoration: none;
+        padding: 10px;
+        display: block;
+        text-align: center;
+        color: black;
+    }
+
+    a:hover {
+        background-color: plum;
+    }
+
+    li {
+        float: left;
+    }
 }
