--- a/style.css
+++ b/style.css
@@ -53,15 +53,18 @@ main {
     }
 }
 
+img {
+    width: 95%;
+    border-radius: 15px;
+}
+
 .map {
-    width: 100%;  
+    width: 95%;  
     max-width: 500px;  
     height: auto; 
     display: block;  
-    margin: 0 auto;
+    margin: auto;
     border-radius: 15px;
-    float: right;
-    margin-right: 10px;
 }
 
 @media only screen and (min-width: 800px) {
@@ -83,6 +86,12 @@ br {
 p, h2 {
     padding: 5px 10px 5px 10px;
 }
+
+h2, h3 {
+    font-weight: bold;
+    text-align: center;
+}
+
 
 footer {
     background-color: black;
