--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 main {
@@ -56,6 +57,7 @@ main {
 img {
     width: 95%;
     border-radius: 15px;
+    margin: 10px;
 }
 
 .map {
@@ -67,7 +69,7 @@ img {
     border-radius: 15px;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 650px) {
     .left-column {
         float: left;
         width: 70%;
@@ -90,6 +92,16 @@ p, h2 {
 h2, h3 {
     font-weight: bold;
     text-align: center;
+}
+
+.dropdown-toggle {
+    margin: 10px;
+}
+
+.centre {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 
