--- a/style.css
+++ b/style.css
@@ -24,34 +24,32 @@ main {
     margin-bottom: 0px;
 }
 
-.navigation {
-    ul {
-        list-style-type: none;
-        background-color: white;
-        margin: 0px;
-        padding: 0px;
-        float: left;
-        overflow: hidden;
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-    }
+.navigation ul {
+    list-style-type: none;
+    background-color: white;
+    margin: 0px;
+    padding: 0px;
+    float: left;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
 
-    a {
-        text-decoration: none;
-        padding: 10px;
-        display: block;
-        text-align: center;
-        color: black;
-    }
+.navigation a {
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+    text-align: center;
+    color: black;
+}
 
-    a:hover {
-        background-color: plum;
-    }
+.navigation a:hover {
+    background-color: plum;
+}
 
-    li {
-        float: left;
-    }
+.navigation li {
+    float: left;
 }
 
 img {
@@ -111,6 +109,6 @@ footer {
     width: 100%;
     padding-bottom: 1px;
     margin-top: auto;
-    font: Arial;
+    font-family: Arial;
     font-size: 12px;
 }
